[gd_scene load_steps=10 format=3 uid="uid://d0r5a5kwi5eoo"]

[ext_resource type="Script" path="res://scenes/pause_menu/pause_menu.gd" id="1_j0qui"]
[ext_resource type="FontFile" uid="uid://b16ggo6tgg351" path="res://assets/font/Gabriela-Regular.ttf" id="1_y26lm"]
[ext_resource type="PackedScene" uid="uid://civm4tg15jr0q" path="res://scenes/title_screen/paper_button_double_sided.tscn" id="2_jcbm4"]
[ext_resource type="Shader" path="res://shader/scroll.gdshader" id="2_karch"]
[ext_resource type="Texture2D" uid="uid://d0f7jq4x8g3ai" path="res://assets/texture/texture_leaf_pattern.png" id="2_nwcox"]
[ext_resource type="FontFile" uid="uid://c5kqanfa0j1nl" path="res://assets/font/DancingScript-VariableFont_wght.ttf" id="3_tc3ds"]
[ext_resource type="Script" path="res://scenes/ui/button_selection_handler.gd" id="3_trrex"]
[ext_resource type="Script" path="res://scenes/ui/ui_upscaler.gd" id="6_qdgdp"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_nars6"]
shader = ExtResource("2_karch")
shader_parameter/speed = -0.15

[node name="PauseMenu" type="Control" node_paths=PackedStringArray("button_selection_handler", "resume_button", "gallery_button", "options_button", "exit_button")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_j0qui")
button_selection_handler = NodePath("VBoxContainer/ButtonSelectionHandler")
resume_button = NodePath("VBoxContainer/PaperButton")
gallery_button = NodePath("VBoxContainer/PaperButton2")
options_button = NodePath("VBoxContainer/PaperButton3")
exit_button = NodePath("VBoxContainer/PaperButton4")

[node name="Sprite2D" type="TextureRect" parent="."]
material = SubResource("ShaderMaterial_nars6")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -640.0
offset_bottom = -360.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)
texture = ExtResource("2_nwcox")
stretch_mode = 1

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.678431)

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -306.0
offset_bottom = -223.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/outline_size = 24
theme_override_fonts/font = ExtResource("1_y26lm")
theme_override_font_sizes/font_size = 64
text = "PAUSE_LABEL"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="Blake" type="Label" parent="."]
modulate = Color(0.359069, 0.359069, 0.359069, 0.509804)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_right = -863.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_tc3ds")
theme_override_font_sizes/font_size = 22
text = "O Autumn, laden with fruit, and stained
With the blood of the grape, pass not, but sit
Beneath my shady roof; there thou mayst rest,
And tune thy jolly voice to my fresh pipe,
And all the daughters of the year shall dance!
Sing now the lusty song of fruits and flowers.

\"The narrow bud opens her beauties to
The sun, and love runs in her thrilling veins;
Blossoms hang round the brows of Morning, and
Flourish down the bright cheek of modest Eve,
Till clust'ring Summer breaks forth into singing,
And feather'd clouds strew flowers round her head.

\"The spirits of the air live on the smells
Of fruit; and Joy, with pinions light, roves round
The gardens, or sits singing in the trees.\"
Thus sang the jolly Autumn as he sat;
Then rose, girded himself, and o'er the bleak
Hills fled from our sight; but left his golden load."
vertical_alignment = 1

[node name="Keats" type="Label" parent="."]
modulate = Color(0.359069, 0.359069, 0.359069, 0.509804)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 863.0
offset_right = -16.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_tc3ds")
theme_override_font_sizes/font_size = 22
text = "Season of mists and mellow fruitfulness,
Close bosom-friend of the maturing sun;
Conspiring with him how to load and bless
With fruit the vines that round the thatch-eves run;
To bend with apples the moss'd cottage-trees,
And fill all fruit with ripeness to the core;
To swell the gourd, and plump the hazel shells
With a sweet kernel; to set budding more,
And still more, later flowers for the bees,
Until they think warm days will never cease,
For Summer has o'er-brimm'd their clammy cells...
Where are the songs of Spring? Ay, where are they?
Think not of them, thou hast thy music too,â€”
While barred clouds bloom the soft-dying day,
And touch the stubble-plains with rosy hue;
Then in a wailful choir the small gnats mourn
Among the river sallows, borne aloft
Or sinking as the light wind lives or dies;
And full-grown lambs loud bleat from hilly bourn;
Hedge-crickets sing; and now with treble soft
The red-breast whistles from a garden-croft;
And gathering swallows twitter in the skies."
horizontal_alignment = 2
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
process_mode = 2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 227.0
offset_bottom = -147.0
grow_horizontal = 2
grow_vertical = 2

[node name="PaperButton" parent="VBoxContainer" instance=ExtResource("2_jcbm4")]
layout_mode = 2
text_key = "MENU_BUTTON_RESUME"

[node name="PaperButton2" parent="VBoxContainer" instance=ExtResource("2_jcbm4")]
layout_mode = 2
text_key = "MENU_BUTTON_GALLERY"

[node name="PaperButton3" parent="VBoxContainer" instance=ExtResource("2_jcbm4")]
layout_mode = 2
text_key = "MENU_BUTTON_OPTIONS"

[node name="PaperButton4" parent="VBoxContainer" instance=ExtResource("2_jcbm4")]
layout_mode = 2
text_key = "MENU_BUTTON_EXIT"

[node name="ButtonSelectionHandler" type="Node" parent="VBoxContainer" node_paths=PackedStringArray("buttons_origin")]
script = ExtResource("3_trrex")
buttons_origin = NodePath("..")

[node name="UIUpscaler" type="Node" parent="."]
script = ExtResource("6_qdgdp")
